--- a/1.html
+++ b/1.html
@@ -178,7 +178,7 @@
                 <li>Enfermedades mentales: Se ha comprobado que las enfermedades mentales proliferan gracias a diversos factores y uno de ellos es la contaminación.</ul>
 
                     <figure>
-                        <img src="C:\Users\jmosq\Downloads\WhatsApp Image 2024-10-06 at 7.07.26 AM.jpeg" 
+                        <img src="Gráficas.jpeg" 
                              alt="Calidad del Aire en Querétaro (Porcentaje de Días)" 
                              style="width: 500px; height: auto;">
                         <figcaption>Calidad del Aire en Querétaro (Porcentaje de Días).Fuente:INEGI</figcaption>
